snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1-all.jar.sha512
771fd8194655ec32e9e2021fc338ec9c8393565453c19a097136397deafed2d94ef9f1e51e37e2953279feb2d70638fd5152b0ed10234cb07112d3cf78833ef2